# RustIDE

./: Cargo.toml  README.MD
crates/entities/: Cargo.toml
crates/entities/src/: lib.rs
crates/framework_drivers/: Cargo.toml
crates/interface_adapters/: Cargo.toml
crates/use_cases/: Cargo.toml
